# esTwin

./: CMakeLists.txt  README.md  package.xml
config/abb/: abb_controllers.yaml
config/kuka/: joint_trajectory_controller_config.yaml  ros2_controller_config.yaml
config/ur/: ur5_update_rate.yaml  ur_controllers.yaml
include/communication_helpers/: ros2_control_tools.hpp  service_tools.hpp
include/solution_manager/: solution_manager.hpp
include/solution_manager_core/: control_mode.hpp  controller_handler.hpp  controller_names.hpp  parameter_handler.hpp  robot_manager_node.hpp  ros2_base_lc_node.hpp  ros2_base_node.hpp
launch/: abb_irb1600.launch.py  kuka_kr6r700sixx.launch.py  solution.launch.py  ur_5.launch.py
src/: abb_robot_manager_node.cpp  controller_handler.cpp  parameter_handler.cpp  robot_manager_node.cpp  ros2_base_lc_node.cpp  ros2_base_node.cpp  solution_manager.cpp  ur_robot_manager_node.cpp
