<?xml version="1.0"?>
<package format="3">
  <name>dtir_solution_manager</name>
  <version>0.1.0</version>
  <description>
    Multi-robot manager for controlling multiple KUKA robots using ROS 2.
    This repository is inspired and based on kuka_drivers (https://github.com/kroshu/kuka_drivers).
    This repository aims to use robot managers for more kinds of industrial robots such ABB and UR ones.
    This repository also aims to have solution managers for practical industrial solutions and digital twins with multiple industrial robots.
  </description>
  <maintainer email="zhihaoliu@ieee.org">Zhihao Liu</maintainer>
  <license>Apache-2.0</license>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>controller_manager_msgs</depend>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->


  <export>
	<build_type>ament_cmake</build_type>
  </export>
</package>

